--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en"> <!-- added lang! -->
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>My Site Title</title>
+</head>
+<body>
+    <!-- my content  -->
+</body>
+</html>
+
